[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "procmount"
version = "0.1.0"
description = "Procedurally generate mountain landscape images (zero dependencies)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

[project.scripts]
procmount = "procmount.cli:main"

[tool.setuptools]
packages = ["procmount"]
